--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/three": "^9.5.2",
+    "@react-three/drei": "^9.19.7",
+    "@react-three/fiber": "^8.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,15 +13,23 @@
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.16",
     "@types/react-dom": "^18.0.6",
+    "drei": "^2.2.21",
+    "gh-pages": "^4.0.0",
     "i18next": "^21.8.16",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.3",
+    "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.5.2",
+    "react-three-fiber": "^6.0.13",
+    "react-top-loading-bar": "^2.1.0",
     "react-typing-effect": "^2.0.5",
+    "react-vertical-timeline-component": "^3.5.2",
     "styled-components": "^5.3.5",
     "styled-reset": "^4.4.2",
+    "three": "^0.143.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -49,7 +60,10 @@
   "devDependencies": {
     "@types/i18next": "^13.0.0",
     "@types/react-i18next": "^8.1.0",
+    "@types/react-icons": "^3.0.0",
     "@types/react-typing-effect": "^2.0.3",
-    "@types/styled-components": "^5.1.25"
+    "@types/react-vertical-timeline-component": "^3.3.3",
+    "@types/styled-components": "^5.1.25",
+    "@types/three": "^0.143.0"
   }
 }
